RigelEngine: specify dependency

--- a/config.json
+++ b/config.json
@@ -261,7 +261,7 @@
                 "repo" : "https://github.com/lethal-guitar/RigelEngine.git",
                 "commit" : "67f1ff7faecb565a93b72d1f803c4424c9428e63"
             },
-            "required dependencies" : ["boost", "sdl2", "sdl2-mixer"],
+            "required dependencies" : ["boost-program-options", "sdl2", "sdl2-mixer"],
             "to skip" : [
                 "resample_005Fneon_002Eh"
             ],
