install required dependencies through vcpkg

--- a/config.json
+++ b/config.json
@@ -3,7 +3,10 @@
         "build directory" : "C:/Work/JetBrains.ReSharper.CommandLineTools.2018.3.EAP6.Checked",
         "test directory" : "C:/Work/cli-test",
         "VS CMake Generator" : "Visual Studio 15 2017 Win64",
-        "vcpkg" : "C:/Work/vcpkg"
+        "vcpkg" : {
+            "path" : "C:/Work/vcpkg",
+            "triplet" : "x64-windows"
+        }
     },
     "projects" : {
         "glslang" : {
