CorrectnessTest: check that count of inspected files equals to predefined value

--- a/proj-config/ONNXRuntime.json
+++ b/proj-config/ONNXRuntime.json
@@ -107,5 +107,6 @@
             "line": "94",
             "message": "Cannot resolve symbol"
         }
-    ]
+    ],
+    "inspected files count": 1064
 }
