--- a/projects.json
+++ b/projects.json
@@ -3,25 +3,29 @@
         "sources": {
             "repo": "https://github.com/KhronosGroup/glslang.git",
             "commit": "1c1c2d643a6b0acaad428e82594ddde9af51c19c"
-        }
+        },
+        "inspected files count": 112
     },
     "cds": {
         "sources": {
             "repo": "https://github.com/khizmax/libcds",
             "commit": "e808976c63e4a58b035bafa473201cf77c9a2c46"
-        }
+        },
+        "inspected files count": 20
     },
     "args": {
         "sources": {
             "repo": "https://github.com/taywee/args",
             "commit": "a82a9d6c94d7c58d8b96c65bdc1aba09a4f3e5db"
-        }
+        },
+        "inspected files count": 6
     },
     "replxx": {
         "sources": {
             "repo": "https://github.com/AmokHuginnsson/replxx",
             "commit": "f719de5ee3c89d9dd955f43a8b95eecebdf9ccd6"
-        }
+        },
+        "inspected files count": 13
     },
     "LLVM": "LLVM.json",
     "fmtlib": "FMT.json",
@@ -30,33 +34,38 @@
             "repo": "https://gitlab.kitware.com/vtk/vtk.git",
             "commit": "1b8edea9261a9a06b4de164f462b44925cce429e"
         },
-        "project to check": "vtkCommonCoreCxxTests"
+        "project to check": "vtkCommonCoreCxxTests",
+        "inspected files count": 56
     },
     "ITK": {
         "sources": {
             "repo": "https://github.com/InsightSoftwareConsortium/ITK.git",
             "commit": "b95b4c41af6ba76bdb26a59967c85fdcc23f1464"
         },
-        "project to check": "ITKCommon"
+        "project to check": "ITKCommon",
+        "inspected files count": 90
     },
     "rocksdb": {
         "sources": {
             "repo": "https://github.com/facebook/rocksdb.git",
             "commit": "de651035535b6d66276edc97c121cb507e9138cb"
-        }
+        },
+        "inspected files count": 625
     },
     "OpenSceneGraph": {
         "sources": {
             "repo": "https://github.com/openscenegraph/OpenSceneGraph.git",
             "commit": "85504b45f6229c2695bc109d771045fcb10fc1e0"
-        }
+        },
+        "inspected files count": 1770
     },
     "OpenCV": {
         "sources": {
             "repo": "https://github.com/opencv/opencv.git",
             "commit": "cab15f6c5e32110b1c9ee0359ee7f8801defe53d"
         },
-        "project to check": "opencv_test_*"
+        "project to check": "opencv_test_*",
+        "inspected files count": 309
     },
     "RxCpp": {
         "sources": {
@@ -69,19 +78,22 @@
                 "line": "32",
                 "message": "Type 'rxcpp::schedulers::detail::action_type' is incomplete"
             }
-        ]
+        ],
+        "inspected files count": 246
     },
     "SQLiteCpp": {
         "sources": {
             "repo": "https://github.com/SRombauts/SQLiteCpp",
             "commit": "b454170da118d64eed77ee082f0d9aae8c97543d"
-        }
+        },
+        "inspected files count": 18
     },
     "argh": {
         "sources": {
             "repo": "https://github.com/adishavit/argh",
             "commit": "0775441d436749263279626a1c820267940188f7"
-        }
+        },
+        "inspected files count": 2
     },
     "Eigen3": {
         "sources": {
@@ -92,7 +104,8 @@
         "project to check": "cxx11_*",
         "cmake options": [
             "-DEIGEN_TEST_CXX11=ON"
-        ]
+        ],
+        "inspected files count": 82
     },
     "X265": {
         "sources": {
@@ -103,13 +116,15 @@
         "project to check": [
             "common",
             "encoder"
-        ]
+        ],
+        "inspected files count": 93
     },
     "DependencyChecker": {
         "sources": {
             "repo": "https://github.com/tomtom-international/cpp-dependencies.git",
             "commit": "e41dc70c62b2d6e3fea014b3a0e62dc64fed6d5f"
-        }
+        },
+        "inspected files count": 20
     },
     "ZSTD": {
         "sources": {
@@ -119,7 +134,8 @@
         },
         "cmake options": [
             "-DZSTD_BUILD_TESTS=ON"
-        ]
+        ],
+        "inspected files count": 123
     },
     "Protobuf": "Protobuf.json",
     "Chakra.Core": "Chakra.json",
@@ -138,7 +154,8 @@
         "project to check": [
             "clrgc",
             "cordbdi"
-        ]
+        ],
+        "inspected files count": 90
     },
     "Catch2": {
         "sources": {
@@ -147,33 +164,38 @@
         },
         "to skip": [
             "catch_005Fobjc_002A"
-        ]
+        ],
+        "inspected files count": 203
     },
     "Google-Brotli": {
         "sources": {
             "repo": "https://github.com/google/brotli.git",
             "commit": "5805f99a533a8f8118699c0100d8c102f3605f65"
         },
-        "build dir": "out"
+        "build dir": "out",
+        "inspected files count": 49
     },
     "Google-RE2": {
         "sources": {
             "repo": "https://github.com/google/re2.git",
             "commit": "e860767c86e577b87deadf24cc4567ea83c4f162"
         },
-        "build dir": "out"
+        "build dir": "out",
+        "inspected files count": 72
     },
     "Snappy": {
         "sources": {
             "repo": "https://github.com/google/snappy.git",
             "commit": "ea660b57d65d68d521287c903459b6dd3b2804d0"
-        }
+        },
+        "inspected files count": 13
     },
     "dlib": {
         "sources": {
             "repo": "https://github.com/davisking/dlib.git",
             "commit": "99af7b9d54f47fc0609490fde09b6c20fde6ae62"
-        }
+        },
+        "inspected files count": 134
     },
     "imgui": {
         "sources": {
@@ -182,7 +204,8 @@
         },
         "custom build tool": {
             "path to .sln": "examples/imgui_examples.sln"
-        }
+        },
+        "inspected files count": 63
     },
     "shaderc": "Shaderc.json",
     "benchmark": "Benchmark.json",
@@ -190,7 +213,8 @@
         "sources": {
             "repo": "https://github.com/microsoft/wil.git",
             "commit": "ade910fb44f0b23c03111a2838c2148d326f5622"
-        }
+        },
+        "inspected files count": 18
     },
     "draco": {
         "sources": {
@@ -199,14 +223,16 @@
         },
         "to skip": [
             "mesh_005F_002A_005Fhelpers_002Eh"
-        ]
+        ],
+        "inspected files count": 303
     },
     "GLM": {
         "sources": {
             "repo": "https://github.com/g-truc/glm.git",
             "commit": "fce2abd01ce21063bd25ba67c9318be83bf48813"
         },
-        "project to check": "test-*"
+        "project to check": "test-*",
+        "inspected files count": 153
     },
     "ONNXRuntime": "ONNXRuntime.json",
     "SEAL": {
@@ -217,13 +243,15 @@
         },
         "cmake options": [
             "-DALLOW_COMMAND_LINE_BUILD=1"
-        ]
+        ],
+        "inspected files count": 32
     },
     "UnitTestCpp": {
         "sources": {
             "repo": "https://github.com/unittest-cpp/unittest-cpp.git",
             "commit": "bc5d87f484cac2959b0a0eafbde228e69e828d74"
-        }
+        },
+        "inspected files count": 78
     },
     "mwt-ds-explore": {
         "sources": {
@@ -232,7 +260,8 @@
         },
         "custom build tool": {
             "path to .sln": "explore.sln"
-        }
+        },
+        "inspected files count": 7
     },
     "Plist": {
         "sources": {
@@ -242,7 +271,8 @@
         "project to check": [
             "PlistCpp",
             "NSPlist"
-        ]
+        ],
+        "inspected files count": 5
     },
     "Sprout": "Sprout.json",
     "eEVM": {
@@ -252,7 +282,8 @@
         },
         "required dependencies": [
             "boost-multiprecision"
-        ]
+        ],
+        "inspected files count": 18
     },
     "xgboost": {
         "sources": {
@@ -262,13 +293,15 @@
         "to skip": [
             "input_005Fsplit_005Fshuffle_002Eh",
             "lua_002Eh"
-        ]
+        ],
+        "inspected files count": 88
     },
     "json-rpc-cxx": {
         "sources": {
             "repo": "https://github.com/jsonrpcx/json-rpc-cxx.git",
             "commit": "6cb2db06e048ed000ccb66422ec52f3725be41e6"
-        }
+        },
+        "inspected files count": 13
     },
     "RigelEngine": {
         "sources": {
@@ -290,7 +323,8 @@
                 "message": "Cannot resolve symbol 'spx_uint32_t'",
                 "reason": "wrong order of #include's"
             }
-        ]
+        ],
+        "inspected files count": 277
     },
     "PhysX-3.4": {
         "sources": {
@@ -303,6 +337,7 @@
         "project to check": "PhysX",
         "to skip": [
             "PxMetaDataCompare_002Eh"
-        ]
+        ],
+        "inspected files count": 179
     }
 }
